//
//  EVChargingStationsLocalDataSource.swift
//  EV Charging Station Finder
//
//  Created by Jesus Daniel Medina Cruz on 18/07/25.
//

import Foundation

protocol EVChargingStationsLocalDataSource {
  // TODO: Not yet implemented
}
