//
//  ConnectorType.swift
//  EV Charging Station Finder
//
//  Created by Jesus Daniel Medina Cruz on 18/07/25.
//

import Foundation

struct ConnectorType {
  // TODO: Not yet implemented
}
