//
//  StationDetailScreen.swift
//  EV Charging Station Finder
//
//  Created by Jesus Daniel Medina Cruz on 18/07/25.
//

import SwiftUI
import MapKit

struct StationDetailScreen: View {
  private let station: UIEVChargingStation?
  
  init() {
    self.station = nil
  }
    
  var body: some View {
    Text("StationDetailView")
  }
}
